--- a/src/app/pages/ui/tables/filter-table/filter-table.component.html
+++ b/src/app/pages/ui/tables/filter-table/filter-table.component.html
@@ -1,9 +1,11 @@
 <tc-card class="mb-0">
-  {{tableData | json}}
-  <button class="btn btn-primary" (click)="filterTbl('active')">Active</button>
+  <!-- {{tableData | json}} -->
+  <!-- <button class="btn btn-primary" (click)="filterTbl('active')">Active</button>
   <button class="btn btn-primary" (click)="filterTbl('inactive')">inActive</button>
-  <button class="btn btn-primary" (click)="filterTbl('all')">All</button>
-  <tc-table [rows]="tableData" [hovered]="true">
+  <button class="btn btn-primary" (click)="filterTbl('all')">All</button> -->
+  <tc-table [rows]="tableData" [hovered]="true"
+  [isActiveFilter]="true"
+  [search]="true">
     <tc-table-col [columnTitle]="'Name'" [columnName]="'name'" [enableFiltering]="true">
       <ng-template #tableTDTemplate let-value>
         <span class="nowrap" [tcColor]="'#336cfb'">{{ value }}</span>
